# alpaqa

./: .clangd  .gitignore  CITATION.cff  CMakeLists.txt  README.md  _config.yml  conanfile.py  pyproject.toml
examples/: CMakeLists.txt  examples.dox
examples/C++/: CMakeLists.txt
examples/C++/Advanced/: CMakeLists.txt  lasso-fbs.cpp
examples/C++/CUTEst/: CMakeLists.txt
examples/C++/CasADi/Rosenbrock/: CMakeLists.txt  main.cpp
examples/C++/CustomControlCppProblem/: CMakeLists.txt  main.cpp
examples/C++/CustomCppProblem/: CMakeLists.txt  main.cpp
examples/C++/DLProblem/: CMakeLists.txt  main.cpp  problem.c  test-matmul.c
examples/C++/FortranProblem/: CMakeLists.txt  main.cpp
examples/C++/SimpleUnconstrProblem/: CMakeLists.txt  main.cpp
examples/CMake/Solver/: CMakeLists.txt  README.md  alpaqa-qp-solver.cpp  conanfile.txt  problem.cpp  problem.hpp  warnings.cmake
examples/CMake/Solver/data/: A.csv  Q.csv  b.csv  c.csv  dim.csv  lbx.csv  q.csv  ubx.csv
examples/Matlab/: getting_started.m
examples/Python/advanced/: cutest-loader.py  nuclear-norm.py
examples/Python/mpc/: inverted-pendulum-mpc.py
examples/Python/mpc/hanging-chain/: hanging-chain-mpc.py
examples/Python/simple_optimization/: getting-started.py  lasso-jax.py  lasso.py  nonlinear-regression.py
examples/mpc/python/bicycle/: bicycle-obstacle-avoidance-mpc.py
examples/mpc/python/hanging-chain/: hanging-chain-mpc.py
examples/problems/: CMakeLists.txt  generate-data.py  sparse-logistic-regression.cpp
examples/util/: CMakeLists.txt
examples/util/include/alpaqa/: example-util.hpp
examples/util/src/: stdout.cpp
interfaces/matlab/: CMakeLists.txt  Problem.m  minimize.m  version.m
interfaces/matlab/include/: alpaqa-mex-types.hpp  solver-builder.ipp  stream.hpp
interfaces/matlab/src/: alpaqa_mex.cpp  solve.cpp  unicode.cpp
python/alpaqa-debug/: pyproject.toml
src/: CMakeLists.txt  alpaqa.dox
src/alpaqa/include/alpaqa/: newton-tr-pantr-alm.hpp  panoc-alm.hpp  panoc-anderson-alm.hpp  panoc-convex-newton-alm.hpp  structured-panoc-alm.hpp  structured-zerofpr-alm.hpp  zerofpr-alm.hpp  zerofpr-anderson-alm.hpp  zerofpr-convex-newton-alm.hpp
src/alpaqa/include/alpaqa/accelerators/: anderson.hpp  lbfgs.hpp  steihaugcg.hpp
src/alpaqa/include/alpaqa/accelerators/internal/: limited-memory-qr.hpp
src/alpaqa/include/alpaqa/config/: config.hpp
src/alpaqa/include/alpaqa/functions/: indicator-box.hpp  l1-norm.hpp  norm-l1.hpp  nuclear-norm.hpp  prox.hpp
src/alpaqa/include/alpaqa/implementation/accelerators/: lbfgs.tpp
src/alpaqa/include/alpaqa/implementation/inner/: fista.tpp  panoc-helpers.tpp  panoc-ocp.tpp  panoc.tpp  pantr.tpp  zerofpr.tpp
src/alpaqa/include/alpaqa/implementation/outer/: alm.tpp
src/alpaqa/include/alpaqa/implementation/params/: json.tpp  params.tpp
src/alpaqa/include/alpaqa/implementation/problem/: type-erased-problem.tpp
src/alpaqa/include/alpaqa/implementation/util/: print.tpp
src/alpaqa/include/alpaqa/inner/: fista.hpp  panoc-ocp.hpp  panoc.hpp  pantr.hpp  wolfe.hpp  zerofpr.hpp
src/alpaqa/include/alpaqa/outer/: alm.hpp
src/alpaqa/include/alpaqa/params/: json.hpp  params.hpp  structs.hpp  structs.ipp  vec-from-file.hpp
src/alpaqa/include/alpaqa/problem/: box-constr-problem.hpp  box.hpp  functional-problem.hpp  kkt-error.hpp  ocproblem.hpp  problem-with-counters.hpp  sparsity-conversions.hpp  sparsity.hpp  type-erased-problem.hpp  unconstr-problem.hpp
src/alpaqa/include/alpaqa/proximal/: indicator-box.hpp  norm-l1.hpp  nuclear-norm.hpp  prox.hpp
src/alpaqa/include/alpaqa/util/: alloc-check.hpp  atomic-stop-signal.hpp  check-dim.hpp  demangled-typename.hpp  dl.hpp  duration-parse.hpp  enumerate.hpp  from_chars-wrapper.hpp  iter-adapter.hpp  lifetime.hpp  parallel.hpp  possible-alias.hpp  print.hpp  set-intersection.hpp  sparse-ops.hpp  string-util.hpp  tag-invoke.hpp  type-erasure.hpp  type-traits.hpp
src/alpaqa/include/alpaqa/util/io/: csv.hpp
src/alpaqa/src/: newton-tr-pantr-alm.cpp  panoc-alm.cpp  panoc-anderson-alm.cpp  panoc-convex-newton-alm.cpp  structured-panoc-alm.cpp  structured-zerofpr-alm.cpp  zerofpr-alm.cpp  zerofpr-anderson-alm.cpp  zerofpr-convex-newton-alm.cpp
src/alpaqa/src/accelerators/: lbfgs.cpp
src/alpaqa/src/driver/: alm-driver.hpp  alpaqa-driver.autocomplete.bash  alpaqa-driver.autocomplete.zsh  alpaqa-driver.cpp  cancel.hpp  extra-stats.hpp  fista-driver.cpp  fista-driver.hpp  gradient-checker.cpp  ipopt-driver.cpp  ipopt-driver.hpp  lbfgsb-driver.cpp  lbfgsb-driver.hpp  openmp.cpp  options.hpp  panoc-driver.cpp  panoc-driver.hpp  pantr-driver.cpp  pantr-driver.hpp  param-complete.cpp  param-complete.hpp  problem.cpp  problem.hpp  qpalm-driver.cpp  qpalm-driver.hpp  results.hpp  solver-driver.hpp
src/alpaqa/src/inner/: fista.cpp  panoc-ocp.cpp  panoc.cpp  pantr.cpp  zerofpr.cpp
src/alpaqa/src/inner/internal/: panoc-helpers.cpp
src/alpaqa/src/outer/: alm.cpp
src/alpaqa/src/outer/internal/: alm-helpers.cpp
src/alpaqa/src/params/: from_chars-compat.ipp  json.cpp  params.cpp
src/alpaqa/src/problem/: ocproblem.cpp  type-erased-problem.cpp
src/alpaqa/src/util/: demangled-typename.cpp  dl.cpp  print.cpp
src/alpaqa/src/util/io/: csv.cpp
src/alpaqa/src/util/quadmath/: quadmath-print.cpp
src/cmake/: BuildTime.cmake  CasADiConfig.cmake.in  Config.cmake.in  CoreConfig.cmake.in  DlConfig.cmake.in  ExtraConfig.cmake.in  Install.cmake  ToolsConfig.cmake.in  alpaqa-build-time.c.in  alpaqa-build-time.cpp.in  dl-problem.cmake
src/interop/casadi/src/: CasADiControlProblem.cpp  CasADiProblem.cpp  CompleteCasADiProblem.cpp  casadi-external-function.cpp
src/interop/cutest/src/: cutest-functions.hpp  cutest-loader.cpp  cutest-types.hpp
src/interop/dl/src/: dl-problem.cpp
src/interop/ipopt/src/: ipopt-adapter.cpp  ipopt-json.cpp  ipopt-params.cpp
src/interop/lbfgsb/src/: lbfgsb-adapter.cpp  lbfgsb-json.cpp  lbfgsb-params.cpp
src/interop/lbfgspp/include/alpaqa/: lbfgsb-adapter.hpp
src/interop/lbfgspp/src/: lbfgsb-adapter.cpp
src/interop/qpalm/src/: qpalm-adapter.cpp  qpalm-json.cpp  qpalm-params.cpp
(+46253 files in other folders)
